...
    <string name="password">Password</string>
    <string name="notRegisteredYet">Not registered yet ? Click here</string>
    <string name="treated_patients">Treated patients</string>
    <string name="logout">Logout</string>
    <string name="appname">VANJEL</string>
    <string name="profile">Profile</string>
    <string name="next_appointment">Next Appointments</string>
    <string name="chat">Chat</string>
    <string name="requests">Requests</string>
    <string name="search">Search</string>
    <string name="nearby_doctors">Nearby Doctors</string>
    <string name="favorites">Favorites</string>
    <string name="set_availabilities">Set availabilities</string>
...
